--- a/index.css
+++ b/index.css
@@ -1,26 +1,29 @@
-
 /* demo-grid.css */
 /* Controls */
 
 .controls {
   margin: 30px -10px;
 }
+
 .control {
   position: relative;
   float: left;
   width: 25%;
   padding: 0 10px;
 }
+
 @media (max-width: 600px) {
   .control {
     float: none;
     width: auto;
     margin: 0 0 15px 0;
   }
+
   .control.layout {
     margin: 0;
   }
 }
+
 .control-icon {
   position: absolute;
   left: 10px;
@@ -32,6 +35,7 @@
   z-index: 2;
   pointer-events: none;
 }
+
 .control-field {
   position: relative;
   padding-left: 40px;
@@ -48,6 +52,7 @@
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
+
 .item {
   position: absolute;
   width: 100px;
@@ -57,31 +62,39 @@
   z-index: 1;
   will-change: transform;
 }
+
 .item.muuri-item-positioning {
   z-index: 2;
 }
+
 .item.muuri-item-dragging,
 .item.muuri-item-releasing {
   z-index: 9999;
 }
+
 .item.muuri-item-dragging {
   cursor: move;
 }
+
 .item.muuri-item-hidden {
   z-index: 0;
 }
+
 .item.h2 {
   height: 220px;
   line-height: 220px;
 }
+
 .item.w2 {
   width: 220px;
 }
+
 .item-content {
   position: relative;
   width: 100%;
   height: 100%;
 }
+
 .card {
   position: absolute;
   left: 0;
@@ -91,7 +104,7 @@
   text-align: center;
   font-size: 24px;
   font-weight: 300;
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   border: 2px solid;
   color: #333;
   border-radius: 4px;
@@ -101,15 +114,19 @@
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
+
 .item.red .card {
   color: #f94a7a;
 }
+
 .item.green .card {
   color: #2ac06d;
 }
+
 .item.blue .card {
   color: #4A9FF9;
 }
+
 .card-id {
   position: absolute;
   left: 7px;
@@ -120,6 +137,7 @@
   font-size: 16px;
   font-weight: 400;
 }
+
 .card-remove {
   position: absolute;
   right: 0;
@@ -142,7 +160,8 @@
   -o-transition: all 0.15s ease-out;
   transition: all 0.15s ease-out;
 }
-.card:hover > .card-remove {
+
+.card:hover>.card-remove {
   -moz-transform: scale(1);
   -webkit-transform: scale(1);
   -o-transform: scale(1);
@@ -156,6 +175,7 @@
   margin: 60px 0;
   text-align: center;
 }
+
 .grid-footer .btn .material-icons {
   margin-right: 10px;
   font-size: 24px;
@@ -198,17 +218,20 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 html {
   overflow-y: scroll;
   overflow-x: hidden;
   background: #fff;
 }
+
 html.dragging body {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
+
 body {
   position: relative;
   font-family: 'Fira Sans', Helvetica, Arial, sans-serif;
@@ -217,6 +240,7 @@ body {
   margin: 0 20px;
   color: #6e6e6e;
 }
+
 a {
   color: #3396FF;
   text-decoration: none;
@@ -226,6 +250,7 @@ a {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
+
 a:hover {
   color: #FF4BD8;
 }
@@ -237,6 +262,7 @@ a:hover {
   content: " ";
   display: table;
 }
+
 .cf:after {
   clear: both;
 }
@@ -277,23 +303,29 @@ a:hover {
   user-select: none;
   border-radius: 3px;
 }
+
 .btn:focus,
 .btn:hover,
 .btn:active {
   outline: 0;
 }
+
 .btn:hover {
   background: #3989de;
 }
+
 .btn:active {
   background: #3075bf;
 }
+
 .btn.active {
   background: #60ca47;
 }
+
 .btn.active:hover {
   background: #40b325;
 }
+
 .btn.active:active {
   background: #309818;
 }
@@ -316,13 +348,16 @@ a:hover {
   -o-appearance: none;
   appearance: none;
 }
+
 select.form-control {
   padding-right: 40px;
   cursor: pointer;
 }
+
 select.form-control::-ms-expand {
   display: none;
 }
+
 .select-arrow {
   position: absolute;
   right: 10px;
@@ -334,6 +369,7 @@ select.form-control::-ms-expand {
   z-index: 2;
   pointer-events: none;
 }
+
 .form-control:focus {
   outline: 0;
   border-color: #4a9ff9;
@@ -345,17 +381,21 @@ header {
   margin: 30px auto;
   max-width: 940px;
 }
+
 header .logo {
   max-width: 240px;
   margin: 60px auto 60px auto;
 }
+
 header .logo svg {
   width: 100%;
   height: 100%;
 }
+
 header h1 {
   display: none;
 }
+
 header h2 {
   text-align: center;
   font-size: 24px;
@@ -365,16 +405,19 @@ header h2 {
   margin: 0 auto;
   color: #6e6e6e;
 }
-header h2 > span {
+
+header h2>span {
   display: block;
   font-size: 18px;
   color: #aaa;
   margin-top: 3px;
 }
-header h2 > span > i {
+
+header h2>span>i {
   margin: 0 10px;
   color: #ccc;
 }
+
 header aside {
   color: #bbb;
   font-size: 15px;
@@ -382,9 +425,11 @@ header aside {
   font-style: italic;
   text-align: center;
 }
+
 header nav {
   text-align: center;
 }
+
 header nav a {
   position: relative;
   display: inline-block;
@@ -394,6 +439,7 @@ header nav a {
   font-size: 20px;
   font-weight: 400;
 }
+
 header nav a i {
   display: block;
   position: absolute;
@@ -415,6 +461,7 @@ header nav a i {
   -o-transition: -o-transform 0.2s ease-out, opacity 0s ease 0.2s;
   transition: transform 0.2s ease-out, opacity 0s ease 0.2s;
 }
+
 header nav a:hover i {
   opacity: 1;
   -moz-transform: scale(1, 1);
@@ -428,33 +475,41 @@ header nav a:hover i {
   -o-transition: -o-transform 0.2s ease-out, opacity 0s ease 0s;
   transition: transform 0.2s ease-out, opacity 0s ease 0s;
 }
+
 @media (max-width: 600px) {
   header {
     margin-bottom: 0;
   }
+
   header h2 {
     font-size: 21px;
   }
-  header h2 > span {
+
+  header h2>span {
     margin-top: 20px;
   }
-  header h2 > span > i {
+
+  header h2>span>i {
     display: none;
   }
-  header h2 > span > span {
+
+  header h2>span>span {
     display: block;
   }
+
   header nav {
     margin-top: 20px;
     border-bottom: 0;
     border-top: 1px solid #e5e5e5;
   }
+
   header nav a {
     display: block;
     vertical-align: top;
     padding: 10px 20px;
     border-bottom: 1px solid #e5e5e5;
   }
+
   header nav a i {
     bottom: -1px;
     left: 0;
@@ -472,14 +527,17 @@ footer {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
 footer p {
   margin: 0;
 }
+
 footer .credits {
   color: #aaa;
   margin-bottom: 5px;
   font-style: italic;
 }
+
 footer .copyright i {
   font-size: 24px;
   height: 27px;
@@ -497,15 +555,18 @@ section {
   border-top: 2px solid #e5e5e5;
   text-align: left;
 }
+
 section.demo {
   margin-top: 30px;
 }
+
 section h4 {
   margin: 30px 0 15px 0;
   font-weight: 500;
   font-size: 20px;
   color: #3e3e3e;
 }
+
 @media (max-width: 600px) {
   section.demo {
     border-top: 0;
@@ -523,12 +584,14 @@ section h4 {
   text-transform: uppercase;
   text-align: center;
 }
-.section-title > span {
+
+.section-title>span {
   position: relative;
   display: inline-block;
   vertical-align: top;
 }
-.section-title > span:after {
+
+.section-title>span:after {
   content: "";
   display: block;
   position: absolute;
@@ -546,12 +609,14 @@ section h4 {
   padding: 0;
   list-style: none;
 }
+
 .feature-list-item {
   position: relative;
   padding-left: 80px;
   margin: 30px 0;
   overflow: hidden;
 }
+
 .feature-list-icon {
   display: block;
   float: left;
@@ -562,15 +627,18 @@ section h4 {
   text-align: left;
   color: #3396FF;
 }
+
 .feature-list-text h4 {
   margin: 0 0 15px 0;
   font-weight: 500;
   font-size: 20px;
 }
+
 @media (max-width: 600px) {
   .feature-list-item {
     padding-left: 0;
   }
+
   .feature-list-icon {
     margin: -4px 10px 0 0;
     width: 24px;
@@ -592,7 +660,7 @@ section h4 {
 
 /* 由 demo-grid.css 取出再覆蓋執行一次 */
 .control-field {
-    position: relative;
-    padding-left: 40px;
-    z-index: 1;
+  position: relative;
+  padding-left: 40px;
+  z-index: 1;
 }
