--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
 /* demo-grid.css */
 /* Controls */
 
+/* ASJAD MIDA KAREN TAHAB VÕIBOLLA VEEL LISADA AGA EI OSKA VEEL*/
+/* BORDER https://codepen.io/unnegative/pen/dVwYBq */
+/* TEXT https://w3bits.com/rainbow-text/ */
+
 .controls {
   margin: 30px -10px;
 }
