--- a/index.css
+++ b/index.css
@@ -5,6 +5,16 @@
 /* BORDER https://codepen.io/unnegative/pen/dVwYBq */
 /* TEXT https://w3bits.com/rainbow-text/ */
 
+.rainbow-box {
+  border: 10px solid transparent;
+  border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+  border-image-slice: 1;
+  height: 1260px;
+  margin: 20px auto;
+  padding: 20px 20px;
+  width: 1000px;
+}
+
 .controls {
   margin: 30px -10px;
 }
@@ -397,6 +407,7 @@
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
+  font-feature-settings: normal;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
