--- a/index.css
+++ b/index.css
@@ -389,6 +389,45 @@ body {
   opacity: 0;
 }
 
+/* https://codepen.io/lemmin/pen/WObwRX */
+.rainbow-button {
+  text-decoration:none;
+  color:black;
+  width:calc(30vw + 6px);
+  height:calc(8vw + 6px);
+  background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+  border-radius:5px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-transform:uppercase;
+  font-size:3vw;
+  font-weight:bold;
+}
+.rainbow-button:after {
+  content:attr(alt);
+  width:30vw;
+  height:8vw;
+  background-color:white;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+.rainbow-button:hover {
+  animation:slidebg 2s linear infinite;
+}
+
+@keyframes slidebg {
+  to {
+    background-position:20vw;
+  }
+}
+
+.center {
+  display: flex; 
+  justify-content: center;
+}
+
 #pwaAddButton {
   display: none;
 }
